use jsonpb Marshaler's EmitDefaults option to allow scalar values of 0 to be emitted by JSON api

--- a/gwy/templates/main.go.tmpl
+++ b/gwy/templates/main.go.tmpl
@@ -145,6 +145,7 @@ func SetupMux(ctx context.Context, cfg proxyConfig) *http.ServeMux {
   gwmux := runtime.NewServeMux(
     runtime.WithIncomingHeaderMatcher(incomingHeaderMatcher),
     runtime.WithOutgoingHeaderMatcher(outgoingHeaderMatcher),
+    runtime.WithMarshalerOption(runtime.MIMEWildcard, &runtime.JSONPb{OrigName: true, EmitDefaults: true}),
   )
   fmt.Printf("Proxying requests to gRPC service at '%s'\n", cfg.backend)
 
